--- a/comparison.html
+++ b/comparison.html
@@ -39,33 +39,32 @@
       <body>
         <div class="container pt-3">
           <div class="row">
-            <div class="col-lg-8">
-              <h2>Summary: Latitude vs. X</h2>
-                  <img class="img-responsive pull-left"> <img src="Resources/assets/images/Fig1.png" width="70%" align="left" /> <p>The purpose of this project was to analyze how weather changes as you get closer to the equator.  To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.
+            <div class="col-lg-12">
+              <h2>Comparison: Latitude vs. X</h2>
+                <p><br>Click any plot to get an in-dept analysis.
                 </p>
-                <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors we looked at included: temperature, cloudiness, wind spead, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlcations witnessed.
-                </p>
-            </div>
-            
-            <div class="col-lg-4">
-              <h4>Visualizations</h4>
                 <div class="row">
                   <div class="col-lg-6">
+                    <h5 class="text-center" style="color:green"><br>vs. Max Temperature</h5>
                     <img class="img-responsive"> <a href="temperature.html"><img src="Resources/assets/images/Fig1.png" width="100%"></a>
                   </div>
                   <div class="col-lg-6">
+                    <h5 class="text-center" style="color:green";><br>vs. Humidity</h5>
                     <img class="img-responsive"> <a href="humidity.html"><img src="Resources/assets/images/Fig2.png" width="100%"></a>
                   </div>
                 </div>
                   <div class="row">
                     <div class="col-lg-6">
+                      <h5 class="text-center" style="color:green";><br>vs. Cloudiness</h5>
                         <img class="img-responsive"> <a href="cloudiness.html"><img src="Resources/assets/images/Fig3.png" width="100%"></a>
                     </div>
                     <div class="col-lg-6">
+                      <h5 class="text-center" style="color:green";><br>vs. Wind Speed</h5>
                         <img class="img-responsive"> <a href="windspeed.html"><img src="Resources/assets/images/Fig4.png" width="100%"></a>
                     </div>
                 </div>
             </div>
+            
         </div>
     </div>
 
