--- a/windspeed.html
+++ b/windspeed.html
@@ -37,38 +37,37 @@
       </nav>
 
       <body>
-        <div class="container pt-3">
-          <div class="row">
-            <div class="col-lg-8">
-              <h2>Summary: Latitude vs. X</h2>
-                  <img class="img-responsive pull-left"> <img src="Resources/assets/images/Fig1.png" width="70%" align="left" /> <p>The purpose of this project was to analyze how weather changes as you get closer to the equator.  To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.
-                </p>
-                <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors we looked at included: temperature, cloudiness, wind spead, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlcations witnessed.
-                </p>
-            </div>
-            
-            <div class="col-lg-4">
-              <h4>Visualizations</h4>
-                <div class="row">
-                  <div class="col-lg-6">
-                    <img class="img-responsive"> <a href="temperature.html"><img src="Resources/assets/images/Fig1.png" width="100%"></a>
-                  </div>
-                  <div class="col-lg-6">
-                    <img class="img-responsive"> <a href="humidity.html"><img src="Resources/assets/images/Fig2.png" width="100%"></a>
-                  </div>
-                </div>
+        <body>
+          <div class="container pt-3">
+            <div class="row">
+              <div class="col-lg-8">
+                <h2>Wind Speed</h2>
+                    <img class="img-responsive"> <img src="Resources/assets/images/Fig4.png" width="100%"> 
+                    <p>As expected, the weather becomes warmer as you approach the equator.  From this graph you can see the southern hemisphere tends to be warmer than the northern hemisphere.  This may be due to the tilt of the earth at the time this data was gathered.
+                    </p>
+              </div>
+              
+              <div class="col-lg-4">
+                <h4>Visualizations</h4>
                   <div class="row">
                     <div class="col-lg-6">
-                        <img class="img-responsive"> <a href="cloudiness.html"><img src="Resources/assets/images/Fig3.png" width="100%"></a>
+                      <img class="img-responsive"> <a href="temperature.html"><img src="Resources/assets/images/Fig1.png" width="100%"></a>
                     </div>
                     <div class="col-lg-6">
-                        <img class="img-responsive"> <a href="windspeed.html"><img src="Resources/assets/images/Fig4.png" width="100%"></a>
+                      <img class="img-responsive"> <a href="humidity.html"><img src="Resources/assets/images/Fig2.png" width="100%"></a>
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
+                  </div>
+                    <div class="row">
+                      <div class="col-lg-6">
+                          <img class="img-responsive"> <a href="cloudiness.html"><img src="Resources/assets/images/Fig3.png" width="100%"></a>
+                      </div>
+                      <div class="col-lg-6">
+                          <img class="img-responsive"> <a href="windspeed.html"><img src="Resources/assets/images/Fig4.png" width="100%" style="border-style: solid;border-width: 3px;border-color: green;"></a>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
