--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <body>
         <div class="container pt-3">
           <div class="row">
-            <div class="col-lg-8">
+            <div class="col-lg-6">
               <h2>Summary: Latitude vs. X</h2>
                   <img class="img-responsive pull-left"> <img src="Resources/assets/images/Fig1.png" width="70%" align="left" /> <p>The purpose of this project was to analyze how weather changes as you get closer to the equator.  To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.
                 </p>
@@ -47,24 +47,12 @@
                 </p>
             </div>
             
-            <div class="col-lg-4">
+            <div class="col-md-5 sidebar">
               <h4>Visualizations</h4>
-                <div class="row">
-                  <div class="col-lg-6">
-                    <img class="img-responsive"> <a href="temperature.html"><img src="Resources/assets/images/Fig1.png" width="100%"></a>
-                  </div>
-                  <div class="col-lg-6">
-                    <img class="img-responsive"> <a href="humidity.html"><img src="Resources/assets/images/Fig2.png" width="100%"></a>
-                  </div>
-                </div>
-                  <div class="row">
-                    <div class="col-lg-6">
-                        <img class="img-responsive"> <a href="cloudiness.html"><img src="Resources/assets/images/Fig3.png" width="100%"></a>
-                    </div>
-                    <div class="col-lg-6">
-                        <img class="img-responsive"> <a href="windspeed.html"><img src="Resources/assets/images/Fig4.png" width="100%"></a>
-                    </div>
-                </div>
+                <img class="img-responsive"> <a href="temperature.html"><img src="Resources/assets/images/Fig1.png" width="200px"></a>
+                <img class="img-responsive"> <a href="humidity.html"><img src="Resources/assets/images/Fig2.png" width="200px"></a>
+                <img class="img-responsive"> <a href="cloudiness.html"><img src="Resources/assets/images/Fig3.png" width="200px"></a>
+                <img class="img-responsive"> <a href="windspeed.html"><img src="Resources/assets/images/Fig4.png" width="200px"></a>
             </div>
         </div>
     </div>
