--- a/windspeed.html
+++ b/windspeed.html
@@ -40,36 +40,25 @@
         <body>
           <div class="container pt-3">
             <div class="row">
-              <div class="col-lg-8">
+              <div class="col-md-7">
                 <h2>Wind Speed</h2>
-                    <img class="img-responsive"> <img src="Resources/assets/images/Fig4.png" width="100%"> 
-                    <p>As expected, the weather becomes warmer as you approach the equator.  From this graph you can see the southern hemisphere tends to be warmer than the northern hemisphere.  This may be due to the tilt of the earth at the time this data was gathered.
+                    <img class="img-responsive"> <img src="Resources/assets/images/Fig2.png" width="100%"/> 
+                    <p>Write something here!
                     </p>
               </div>
               
-              <div class="col-lg-4">
-                <h4>Visualizations</h4>
-                  <div class="row">
-                    <div class="col-lg-6">
-                      <img class="img-responsive"> <a href="temperature.html"><img src="Resources/assets/images/Fig1.png" width="100%"></a>
-                    </div>
-                    <div class="col-lg-6">
-                      <img class="img-responsive"> <a href="humidity.html"><img src="Resources/assets/images/Fig2.png" width="100%"></a>
-                    </div>
-                  </div>
-                    <div class="row">
-                      <div class="col-lg-6">
-                          <img class="img-responsive"> <a href="cloudiness.html"><img src="Resources/assets/images/Fig3.png" width="100%"></a>
-                      </div>
-                      <div class="col-lg-6">
-                          <img class="img-responsive"> <a href="windspeed.html"><img src="Resources/assets/images/Fig4.png" width="100%" style="border-style: solid;border-width: 3px;border-color: green;"></a>
-                      </div>
-                  </div>
+              <div class="col-md-5 sidebar">
+                <h3>Visualizations</h3>
+                <img class="img-responsive"> <a href="temperature.html"><img src="Resources/assets/images/Fig1.png" width="200px"></a> 
+                <img class="img-responsive"> <a href="humidity.html"><img src="Resources/assets/images/Fig2.png" width="200px"></a>
+                <img class="img-responsive"> <a href="cloudiness.html"><img src="Resources/assets/images/Fig3.png" width="200px" ></a>
+                <img class="img-responsive"> <a href="windspeed.html"><img src="Resources/assets/images/Fig4.png" width="200px" style="border-style: solid;border-width: 3px;border-color: green;"></a>
+                     
               </div>
           </div>
       </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    </body>
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+      </body>
 </html>
