Change directory for visualations

--- a/comparison.html
+++ b/comparison.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8">
         <title>Web Design Challenge</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="style.css">
         <body style="background-color:white;"></body>
     </head>
      
@@ -20,10 +19,10 @@
                 Plots
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="temperature.html">Max Temperature</a>
-                <a class="dropdown-item" href="humidity.html">Humidity</a>
-                <a class="dropdown-item" href="cloudiness.html">Cloudiness</a> 
-                <a class="dropdown-item" href="windspeed.html">Wind Speed</a>
+                <a class="dropdown-item" href="visualizations\temperature.html">Max Temperature</a>
+                <a class="dropdown-item" href="visualizations\humidity.html">Humidity</a>
+                <a class="dropdown-item" href="visualizations\cloudiness.html">Cloudiness</a> 
+                <a class="dropdown-item" href="visualizations\windspeed.html">Wind Speed</a>
               </div>
             </li>
             <li class="nav-item">
@@ -39,18 +38,18 @@
       <body>
         <div class="container pt-3">
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-md-12">
               <h2>Comparison: Latitude vs. X</h2>
-                <p><br>Click any plot to get an in-dept analysis.
+                <p><br>Click any plot to get an in-dept analysis.<hr>
                 </p>
                 <div class="row">
                   <div class="col-lg-6">
                     <h5 class="text-center" style="color:green"><br>vs. Max Temperature</h5>
-                    <img class="img-responsive"> <a href="temperature.html"><img src="Resources/assets/images/Fig1.png" width="100%"></a>
+                    <img class="img-responsive"> <a href="temperature.html"><img title = "Test" src="Resources/assets/images/Fig1.png" width="100%"></a>
                   </div>
                   <div class="col-lg-6">
                     <h5 class="text-center" style="color:green";><br>vs. Humidity</h5>
-                    <img class="img-responsive"> <a href="humidity.html"><img src="Resources/assets/images/Fig2.png" width="100%"></a>
+                    <img class="img-responsive"> <a href="humidity.html"><img title = "Test" src="Resources/assets/images/Fig2.png" width="100%"></a>
                   </div>
                 </div>
                   <div class="row">
