--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8">
         <title>Web Design Challenge</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="style.css">
         <body style="background-color:white;"></body>
     </head>
      
@@ -20,10 +19,10 @@
                 Plots
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="temperature.html">Max Temperature</a>
-                <a class="dropdown-item" href="humidity.html">Humidity</a>
-                <a class="dropdown-item" href="cloudiness.html">Cloudiness</a> 
-                <a class="dropdown-item" href="windspeed.html">Wind Speed</a>
+                <a class="dropdown-item" href="visualizations\temperature.html">Max Temperature</a>
+                <a class="dropdown-item" href="visualizations\humidity.html">Humidity</a>
+                <a class="dropdown-item" href="visualizations\cloudiness.html">Cloudiness</a> 
+                <a class="dropdown-item" href="visualizations\windspeed.html">Wind Speed</a>
               </div>
             </li>
             <li class="nav-item">
@@ -39,20 +38,20 @@
       <body>
         <div class="container pt-3">
           <div class="row">
-            <div class="col-lg-6">
-              <h2>Summary: Latitude vs. X</h2>
-                  <img class="img-responsive pull-left"> <img src="Resources/assets/images/Fig1.png" width="70%" align="left" /> <p>The purpose of this project was to analyze how weather changes as you get closer to the equator.  To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.
+            <div class="col-md-6 bg-white">
+              <h2>Summary: Latitude vs. X<hr></h2>
+                  <img class="img-responsive"> <img src="Resources/assets/images/Fig1.png" width="70%" align="left" /> <p>The purpose of this project was to analyze how weather changes as you get closer to the equator.  To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.
                 </p>
                 <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude. Factors we looked at included: temperature, cloudiness, wind spead, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlcations witnessed.
                 </p>
             </div>
-            
-            <div class="col-md-5 sidebar">
-              <h4>Visualizations</h4>
-                <img class="img-responsive"> <a href="temperature.html"><img src="Resources/assets/images/Fig1.png" width="200px"></a>
-                <img class="img-responsive"> <a href="humidity.html"><img src="Resources/assets/images/Fig2.png" width="200px"></a>
-                <img class="img-responsive"> <a href="cloudiness.html"><img src="Resources/assets/images/Fig3.png" width="200px"></a>
-                <img class="img-responsive"> <a href="windspeed.html"><img src="Resources/assets/images/Fig4.png" width="200px"></a>
+            <div class="col-md-1"></div>
+            <div class="col-md-5 sidebar bg-white">
+              <h2>Visualizations<hr></h2>
+                <img class="img-responsive"> <a href="visualizations\temperature.html"><img src="Resources/assets/images/Fig1.png" width="200px"></a>
+                <img class="img-responsive"> <a href="visualizations\humidity.html"><img src="Resources/assets/images/Fig2.png" width="200px"></a>
+                <img class="img-responsive"> <a href="visualizations\cloudiness.html"><img src="Resources/assets/images/Fig3.png" width="200px"></a>
+                <img class="img-responsive"> <a href="visualizations\windspeed.html"><img src="Resources/assets/images/Fig4.png" width="200px"></a>
             </div>
         </div>
     </div>
