--- a/visualizations/humidity.html
+++ b/visualizations/humidity.html
@@ -42,7 +42,7 @@
               <div class="col-md-6">
                 <h2>Humidity<hr></h2>
                     <img class="img-responsive"> <img src="../Resources/assets/images/Fig2.png" width="110%"/> 
-                    <p>Write something here!
+                    <p>From our analysis, there is no correlation between latitude and humidity.  There are humid locations regardless the latitude of your location.
                     </p>
               </div>
               <div class="col-md-1"></div>
