--- a/visualizations/temperature.html
+++ b/visualizations/temperature.html
@@ -41,7 +41,7 @@
             <div class="col-md-6">
               <h2>Max Temperature<hr></h2>
                   <img class="img-responsive"> <img src="../Resources/assets/images/Fig1.png" width="110%"/> 
-                  <p><p>As expected, the weather becomes warmer as you approach the equator.  From this graph you can see the southern hemisphere tends to be warmer than the northern hemisphere.  This may be due to the tilt of the earth at the time this data was gathered.
+                  <p><p>There is a strong correlation between latitude and maximum temperatures, meaning the closer you are to the equator the hotter the temperature.
                   </p>
             </div>
             <div class="col-md-1"></div>
