--- a/visualizations/cloudiness.html
+++ b/visualizations/cloudiness.html
@@ -42,7 +42,7 @@
               <div class="col-md-6">
                 <h2>Cloudiness<hr></h2>
                     <img class="img-responsive"> <img src="../Resources/assets/images/Fig3.png" width="110%"/> 
-                    <p>Write something here!
+                    <p>There is no correlation between latitude and cloudiness, with clouds pretty much all over the planet.
                     </p>
               </div>
               <div class="col-md-1"></div>
