Fixed missing path on comparison page

--- a/comparison.html
+++ b/comparison.html
@@ -45,21 +45,21 @@
                 <div class="row">
                   <div class="col-lg-6">
                     <h5 class="text-center" style="color:green"><br>vs. Max Temperature</h5>
-                    <img class="img-responsive"> <a href="temperature.html"><img title = "Test" src="Resources/assets/images/Fig1.png" width="100%"></a>
+                    <img class="img-responsive"> <a href="visualizations\temperature.html"><img title = "Test" src="Resources/assets/images/Fig1.png" width="100%"></a>
                   </div>
                   <div class="col-lg-6">
                     <h5 class="text-center" style="color:green";><br>vs. Humidity</h5>
-                    <img class="img-responsive"> <a href="humidity.html"><img title = "Test" src="Resources/assets/images/Fig2.png" width="100%"></a>
+                    <img class="img-responsive"> <a href="visualizations\humidity.html"><img title = "Test" src="Resources/assets/images/Fig2.png" width="100%"></a>
                   </div>
                 </div>
                   <div class="row">
                     <div class="col-lg-6">
                       <h5 class="text-center" style="color:green";><br>vs. Cloudiness</h5>
-                        <img class="img-responsive"> <a href="cloudiness.html"><img src="Resources/assets/images/Fig3.png" width="100%"></a>
+                        <img class="img-responsive"> <a href="visualizations\cloudiness.html"><img src="Resources/assets/images/Fig3.png" width="100%"></a>
                     </div>
                     <div class="col-lg-6">
                       <h5 class="text-center" style="color:green";><br>vs. Wind Speed</h5>
-                        <img class="img-responsive"> <a href="windspeed.html"><img src="Resources/assets/images/Fig4.png" width="100%"></a>
+                        <img class="img-responsive"> <a href="visualizations\windspeed.html"><img src="Resources/assets/images/Fig4.png" width="100%"></a>
                     </div>
                 </div>
             </div>
