--- a/visualizations/windspeed.html
+++ b/visualizations/windspeed.html
@@ -42,7 +42,7 @@
               <div class="col-md-6  bg-white">
                 <h2>Wind Speed<hr></h2>
                     <img class="img-responsive"> <img src="../Resources/assets/images/Fig2.png" width="110%"> 
-                    <p>There is no correlation between latitude and wind speed.  This means the winds are not affected by your latitude.
+                    <p>There is no correlation between latitude and wind speed, meaning winds are not affected by location.
                     </p>
               </div>
               <div class="col-md-1"></div>
